--- a/jianshu-client/jianshu-client-rpc/pom.xml
+++ b/jianshu-client/jianshu-client-rpc/pom.xml
@@ -9,7 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jianshu-client-article</artifactId>
+    <artifactId>jianshu-client-rpc</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
