--- a/jianshu-rpc/jianshu-rpc-server/pom.xml
+++ b/jianshu-rpc/jianshu-rpc-server/pom.xml
@@ -25,10 +25,38 @@
             <artifactId>jianshu-rpc-dao</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.zhaoyubo.jianshu</groupId>
+            <artifactId>jianshu-rpc-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zhaoyubo.jianshu</groupId>
+            <artifactId>jianshu-client-rpc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <version>2.7.3</version>
+            <type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
     </dependencies>
 
     <build>
