--- a/jianshu-rpc/jianshu-rpc-server/src/main/profiles/dev.properties
+++ b/jianshu-rpc/jianshu-rpc-server/src/main/profiles/dev.properties
@@ -2,3 +2,4 @@ _project.env=dev
 _spring.datasource.url=jdbc:mysql://127.0.0.1/jianshu?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false
 _spring.datasource.username=root
 _spring.datasource.password=root
+_dubbo.registry.address=zookeeper://122.51.69.165:2181
