--- a/jianshu-client/pom.xml
+++ b/jianshu-client/pom.xml
@@ -10,8 +10,27 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>jianshu-client-cms</module>
-        <module>jianshu-client-article</module>
+        <module>jianshu-client-rpc</module>
     </modules>
+
+    <properties>
+        <!-- 编译属性 -->
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.zhaoyubo.jianshu</groupId>
+                <artifactId>jianshu-common-lib-dependencies</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
 </project>
