--- a/jianshu-common-lib/pom.xml
+++ b/jianshu-common-lib/pom.xml
@@ -13,5 +13,17 @@
         <module>jianshu-common-lib-common</module>
     </modules>
 
+    <properties>
+        <!-- 文件拷贝时的编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 编译时的编码 -->
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <!-- 编译时的jdk版本 -->
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
+
 
 </project>
