--- a/jianshu-rpc/jianshu-rpc-common/pom.xml
+++ b/jianshu-rpc/jianshu-rpc-common/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jianshu-rpc-common</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.zhaoyubo.jianshu</groupId>
+            <artifactId>jianshu-common-lib-common</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
